--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
   body {
-    background: url('https://cdn.hero.page/wallpapers/121fb583-c65c-4988-bd92-06e0e9b0ed2e-minimalist-mountain-peaks-wallpaper-wallpaper-1.png') no-repeat center center fixed;
+    background: url('https://img.freepik.com/free-photo/abstract-grunge-backdrop-dark-silhouette-modern-design-generative-ai_188544-12702.jpg?t=st=1732905884~exp=1732909484~hmac=9852336ac99a4e33b6b4da1cde661642b8672e9bb3aa41dea2f9c004f5c8822f&w=1380') no-repeat center center fixed;
     background-size: cover;
     color: white;
     display: flex;
@@ -453,7 +453,7 @@ canvas {
 
   
     <i class="fas fa-crown"></i> 
-  <img src="https://media.discordapp.net/attachments/1118483965804822598/1144994391925194762/attachment.gif?ex=674b1a20&is=6749c8a0&hm=e50d5ebafb101ea6e7ebdf8bd814c94b53b1b311a6ac661dc6599f1aef9a3ac1&" alt="Profile Picture" class="profile-picture">
+  <img src="https://cdn.discordapp.com/avatars/323644995028647937/e5dc7ff157127f613d3ad95443544705.webp?size=160" alt="Profile Picture" class="profile-picture">
   <div class="profile-info">
     <div class="wrapper">
       <h1 style="margin-left: 25px;">PandaLofy</h1> <img src="https://cdn3.emoji.gg/emojis/8509-star.png" style="width: 25px; height: 25px; margin-left: 10px;">
@@ -1263,7 +1263,7 @@ return div;
 
 
 <script>
-  const originalTitle = "ht‎ ‎ tps:/‎ /tep‎ ‎ a‎ .lol‎ ";
+  const originalTitle = "ht‎ ‎ tps:/‎ /‎ ‎ y‎ .pro ";
   let index = 0;
 
   function animateTitle() {
@@ -1835,7 +1835,7 @@ loop();
 <script>
 
   // function([string1, string2],target id,[color1,color2])    
- consoleText(['$1.75 per dick', 'love cock', 'nigga', 'gangbang', 'https://lofy.pro'], 'text',['gray','white','gray', 'white,', 'gray']);
+ consoleText(['Experienced in hacking', 'Node.js', 'PHP, Python', 'since 2014', 'https://lofy.pro'], 'text',['gray','white','gray', 'white,', 'gray']);
 
 function consoleText(words, id, colors) {
   if (colors === undefined) colors = ['#fff'];
